# haste-deck

./: .travis.yml  LICENSE  README.md  haste-deck.cabal
Haste/: Deck.hs
Haste/Deck/: Config.hs  Control.hs  Extras.hs  Internal.hs  Markup.hs  Transitions.hs  Types.hs
examples/photostack/: photostack.hs
