name:                haste-deck
version:             0.1.0.0
synopsis:            Create presentation slides and simple web pages using an intuitive EDSL
description:         EDSL for embedding slideshows and presentations into web applications, or embedding web applications into slideshows and presentations, using the Haste compiler.
homepage:            https://github.com/valderman/haste-deck
license:             MIT
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
category:            Web
build-type:          Simple
cabal-version:       >=1.10
homepage:            https://github.com/valderman/haste-deck/
bug-reports:         https://github.com/valderman/haste-deck/issues
stability:           Experimental

source-repository head
    type:       git
    location:   https://github.com/valderman/haste-deck.git

library
  exposed-modules:
    Haste.Deck
    Haste.Deck.Transitions
  other-modules:
    Haste.Deck.Config
    Haste.Deck.Control
    Haste.Deck.Internal
    Haste.Deck.Markup
    Haste.Deck.Types
  other-extensions:
    OverloadedStrings
    CPP
  build-depends:
    base >=4.6 && <4.9,
    array >=0.4 && <0.6,
    transformers >=0.4 && <0.6,
    data-default,
    haste-lib >=0.6 && <0.7

  default-language:
    Haskell2010
  ghc-options:
    -Wall
